--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ Flask~=3.1.2
 SQLAlchemy~=2.0.44
 Werkzeug~=3.1.3
 WTForms~=3.2.1
-Flask-Bootstrap~=3.3.7.1
 Flask-Login~=0.6.3
 python-dotenv~=1.2.1
 gunicorn
 Flask_SQLAlchemy==3.0.5
+flask-bootstrap5
+
