--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
-flask-wtf
-Flask~=3.1.2
-SQLAlchemy~=2.0.44
-Werkzeug~=3.1.3
-WTForms~=3.2.1
-Flask-Login~=0.6.3
-python-dotenv~=1.2.1
-gunicorn
-Flask_SQLAlchemy==3.0.5
-flask-bootstrap5
-
+blinker==1.9.0
+Bootstrap-Flask==2.5.0
+click==8.3.0
+colorama==0.4.6
+dominate==2.9.1
+Flask==3.1.2
+flask-bootstrap5==0.1.dev1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.2.2
+greenlet==3.2.4
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+packaging==25.0
+psycopg2-binary==2.9.11
+python-dotenv==1.2.1
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+visitor==0.1.3
+Werkzeug==3.1.3
+WTForms==3.2.1
+wtforms-bootstrap5==0.3.0
