--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,40 @@
+alembic==1.17.2
+asgiref==3.11.0
 blinker==1.9.0
 Bootstrap-Flask==2.5.0
-click==8.3.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
+config==0.5.1
+Django==6.0
+django-request==1.7.1
 dominate==2.9.1
 Flask==3.1.2
 flask-bootstrap5==0.1.dev1
+Flask-CKEditor==1.0.0
 Flask-Login==0.6.3
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.2.2
 greenlet==3.2.4
 gunicorn==23.0.0
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 MarkupSafe==3.0.3
 packaging==25.0
 psycopg2-binary==2.9.11
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+requests==2.32.5
+six==1.17.0
 SQLAlchemy==2.0.44
+sqlparse==0.5.4
 typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
 visitor==0.1.3
 Werkzeug==3.1.3
 WTForms==3.2.1
